Removed errors on modified some panels and pojos

--- a/FinalProject/nbproject/project.properties
+++ b/FinalProject/nbproject/project.properties
@@ -27,12 +27,17 @@ dist.dir=dist
 dist.jar=${dist.dir}/FinalProject.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.db4o-8.0.249.16098-all-java5.jar=/Users/shwetatatiya/Downloads/db4o-8.0.249.16098-all-java5.jar
+file.reference.AbsoluteLayout-RELEASE65.jar=C:/AEDLIBRARY/libraries/AbsoluteLayout-RELEASE65.jar
+file.reference.AbsoluteLayout-RELEASE65.jar-1=../AbsoluteLayout-RELEASE65.jar
+file.reference.db4o-8.0.249.16098-all-java5.jar=C:/AEDLIBRARY/libraries/db4o-8.0.249.16098-all-java5.jar
+file.reference.db4o-8.0.249.16098-all-java5.jar-1=../db4o-8.0.249.16098-all-java5.jar
 includes=**
 jar.compress=false
 javac.classpath=\
+    ${file.reference.AbsoluteLayout-RELEASE65.jar}:\
     ${file.reference.db4o-8.0.249.16098-all-java5.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${file.reference.AbsoluteLayout-RELEASE65.jar-1}:\
+    ${file.reference.db4o-8.0.249.16098-all-java5.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -57,7 +62,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=
+main.class=UserInterface.MainJFrame
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
