--- a/FinalProject/nbproject/project.properties
+++ b/FinalProject/nbproject/project.properties
@@ -28,16 +28,12 @@ dist.jar=${dist.dir}/FinalProject.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.AbsoluteLayout-RELEASE65.jar=C:/AEDLIBRARY/libraries/AbsoluteLayout-RELEASE65.jar
-file.reference.AbsoluteLayout-RELEASE65.jar-1=../AbsoluteLayout-RELEASE65.jar
 file.reference.db4o-8.0.249.16098-all-java5.jar=C:/AEDLIBRARY/libraries/db4o-8.0.249.16098-all-java5.jar
-file.reference.db4o-8.0.249.16098-all-java5.jar-1=../db4o-8.0.249.16098-all-java5.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.AbsoluteLayout-RELEASE65.jar}:\
-    ${file.reference.db4o-8.0.249.16098-all-java5.jar}:\
-    ${file.reference.AbsoluteLayout-RELEASE65.jar-1}:\
-    ${file.reference.db4o-8.0.249.16098-all-java5.jar-1}
+    ${file.reference.db4o-8.0.249.16098-all-java5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
