field partner java files

--- a/FinalProject/nbproject/project.properties
+++ b/FinalProject/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=FinalProject
+application.vendor=shwetatatiya
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,14 +27,41 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/FinalProject.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.AbsoluteLayout-RELEASE65.jar=C:/AEDLIBRARY/libraries/AbsoluteLayout-RELEASE65.jar
 file.reference.db4o-8.0.249.16098-all-java5.jar=C:/AEDLIBRARY/libraries/db4o-8.0.249.16098-all-java5.jar
+file.reference.hamcrest-core-1.3.jar=/Users/shwetatatiya/Desktop/Jar files/hamcrest-core-1.3.jar
+file.reference.jcommon-1.0.23.jar=/Users/shwetatatiya/Desktop/Jar files/jcommon-1.0.23.jar
+file.reference.jcommon-1.0.8.jar=/Users/shwetatatiya/Desktop/Jar files/jcommon-1.0.8.jar
+file.reference.jfreechart-1.0.19-demo.jar=/Users/shwetatatiya/Desktop/Jar files/jfreechart-1.0.19-demo.jar
+file.reference.jfreechart-1.0.19-experimental.jar=/Users/shwetatatiya/Desktop/Jar files/jfreechart-1.0.19-experimental.jar
+file.reference.jfreechart-1.0.19-swt.jar=/Users/shwetatatiya/Desktop/Jar files/jfreechart-1.0.19-swt.jar
+file.reference.jfreechart-1.0.19.jar=/Users/shwetatatiya/Desktop/Jar files/jfreechart-1.0.19.jar
+file.reference.jfreesvg-2.0.jar=/Users/shwetatatiya/Desktop/Jar files/jfreesvg-2.0.jar
+file.reference.junit-4.11.jar=/Users/shwetatatiya/Desktop/Jar files/junit-4.11.jar
+file.reference.orsoncharts-1.4-eval-nofx.jar=/Users/shwetatatiya/Desktop/Jar files/orsoncharts-1.4-eval-nofx.jar
+file.reference.orsonpdf-1.6-eval.jar=/Users/shwetatatiya/Desktop/Jar files/orsonpdf-1.6-eval.jar
+file.reference.servlet.jar=/Users/shwetatatiya/Desktop/Jar files/servlet.jar
+file.reference.swtgraphics2d.jar=/Users/shwetatatiya/Desktop/Jar files/swtgraphics2d.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.AbsoluteLayout-RELEASE65.jar}:\
-    ${file.reference.db4o-8.0.249.16098-all-java5.jar}
+    ${file.reference.db4o-8.0.249.16098-all-java5.jar}:\
+    ${file.reference.hamcrest-core-1.3.jar}:\
+    ${file.reference.jcommon-1.0.23.jar}:\
+    ${file.reference.jcommon-1.0.8.jar}:\
+    ${file.reference.jfreechart-1.0.19-demo.jar}:\
+    ${file.reference.jfreechart-1.0.19-experimental.jar}:\
+    ${file.reference.jfreechart-1.0.19-swt.jar}:\
+    ${file.reference.jfreechart-1.0.19.jar}:\
+    ${file.reference.jfreesvg-2.0.jar}:\
+    ${file.reference.junit-4.11.jar}:\
+    ${file.reference.orsoncharts-1.4-eval-nofx.jar}:\
+    ${file.reference.orsonpdf-1.6-eval.jar}:\
+    ${file.reference.servlet.jar}:\
+    ${file.reference.swtgraphics2d.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
