--- a/FinalProject/nbproject/project.properties
+++ b/FinalProject/nbproject/project.properties
@@ -29,26 +29,52 @@ dist.jar=${dist.dir}/FinalProject.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.AbsoluteLayout-RELEASE65.jar=C:/AEDLIBRARY/libraries/AbsoluteLayout-RELEASE65.jar
-file.reference.db4o-8.0.249.16098-all-java5.jar=C:/AEDLIBRARY/libraries/db4o-8.0.249.16098-all-java5.jar
+file.reference.AbsoluteLayout-RELEASE65.jar=C:\\Jar files\\AbsoluteLayout-RELEASE65.jar
+file.reference.AbsoluteLayout.jar=C:\\Jar files\\AbsoluteLayout.jar
+file.reference.db4o-8.0.249.16098-all-java5.jar=C:\\Jar files\\db4o-8.0.249.16098-all-java5.jar
+file.reference.db4o-8.0.249.16098-all-java5.jar-1=/Users/shwetatatiya/Downloads/db4o-8.0.249.16098-all-java5.jar
 file.reference.hamcrest-core-1.3.jar=/Users/shwetatatiya/Desktop/Jar files/hamcrest-core-1.3.jar
+file.reference.hamcrest-core-1.3.jar-1=G:\\Jar files\\hamcrest-core-1.3.jar
+file.reference.hamcrest-core-1.3.jar-2=C:\\Jar files\\hamcrest-core-1.3.jar
 file.reference.jcommon-1.0.23.jar=/Users/shwetatatiya/Desktop/Jar files/jcommon-1.0.23.jar
+file.reference.jcommon-1.0.23.jar-1=G:\\Jar files\\jcommon-1.0.23.jar
+file.reference.jcommon-1.0.23.jar-2=C:\\Jar files\\jcommon-1.0.23.jar
 file.reference.jcommon-1.0.8.jar=/Users/shwetatatiya/Desktop/Jar files/jcommon-1.0.8.jar
+file.reference.jcommon-1.0.8.jar-1=G:\\Jar files\\jcommon-1.0.8.jar
+file.reference.jcommon-1.0.8.jar-2=C:\\Jar files\\jcommon-1.0.8.jar
 file.reference.jfreechart-1.0.19-demo.jar=/Users/shwetatatiya/Desktop/Jar files/jfreechart-1.0.19-demo.jar
+file.reference.jfreechart-1.0.19-demo.jar-1=G:\\Jar files\\jfreechart-1.0.19-demo.jar
+file.reference.jfreechart-1.0.19-demo.jar-2=C:\\Jar files\\jfreechart-1.0.19-demo.jar
 file.reference.jfreechart-1.0.19-experimental.jar=/Users/shwetatatiya/Desktop/Jar files/jfreechart-1.0.19-experimental.jar
+file.reference.jfreechart-1.0.19-experimental.jar-1=G:\\Jar files\\jfreechart-1.0.19-experimental.jar
+file.reference.jfreechart-1.0.19-experimental.jar-2=C:\\Jar files\\jfreechart-1.0.19-experimental.jar
 file.reference.jfreechart-1.0.19-swt.jar=/Users/shwetatatiya/Desktop/Jar files/jfreechart-1.0.19-swt.jar
+file.reference.jfreechart-1.0.19-swt.jar-1=G:\\Jar files\\jfreechart-1.0.19-swt.jar
+file.reference.jfreechart-1.0.19-swt.jar-2=C:\\Jar files\\jfreechart-1.0.19-swt.jar
 file.reference.jfreechart-1.0.19.jar=/Users/shwetatatiya/Desktop/Jar files/jfreechart-1.0.19.jar
+file.reference.jfreechart-1.0.19.jar-1=G:\\Jar files\\jfreechart-1.0.19.jar
+file.reference.jfreechart-1.0.19.jar-2=C:\\Jar files\\jfreechart-1.0.19.jar
 file.reference.jfreesvg-2.0.jar=/Users/shwetatatiya/Desktop/Jar files/jfreesvg-2.0.jar
+file.reference.jfreesvg-2.0.jar-1=G:\\Jar files\\jfreesvg-2.0.jar
+file.reference.jfreesvg-2.0.jar-2=C:\\Jar files\\jfreesvg-2.0.jar
 file.reference.junit-4.11.jar=/Users/shwetatatiya/Desktop/Jar files/junit-4.11.jar
+file.reference.junit-4.11.jar-1=G:\\Jar files\\junit-4.11.jar
+file.reference.junit-4.11.jar-2=C:\\Jar files\\junit-4.11.jar
 file.reference.orsoncharts-1.4-eval-nofx.jar=/Users/shwetatatiya/Desktop/Jar files/orsoncharts-1.4-eval-nofx.jar
+file.reference.orsoncharts-1.4-eval-nofx.jar-1=G:\\Jar files\\orsoncharts-1.4-eval-nofx.jar
+file.reference.orsoncharts-1.4-eval-nofx.jar-2=C:\\Jar files\\orsoncharts-1.4-eval-nofx.jar
 file.reference.orsonpdf-1.6-eval.jar=/Users/shwetatatiya/Desktop/Jar files/orsonpdf-1.6-eval.jar
+file.reference.orsonpdf-1.6-eval.jar-1=G:\\Jar files\\orsonpdf-1.6-eval.jar
+file.reference.orsonpdf-1.6-eval.jar-2=C:\\Jar files\\orsonpdf-1.6-eval.jar
 file.reference.servlet.jar=/Users/shwetatatiya/Desktop/Jar files/servlet.jar
+file.reference.servlet.jar-1=G:\\Jar files\\servlet.jar
+file.reference.servlet.jar-2=C:\\Jar files\\servlet.jar
 file.reference.swtgraphics2d.jar=/Users/shwetatatiya/Desktop/Jar files/swtgraphics2d.jar
+file.reference.swtgraphics2d.jar-1=G:\\Jar files\\swtgraphics2d.jar
+file.reference.swtgraphics2d.jar-2=C:\\Jar files\\swtgraphics2d.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.AbsoluteLayout-RELEASE65.jar}:\
-    ${file.reference.db4o-8.0.249.16098-all-java5.jar}:\
     ${file.reference.hamcrest-core-1.3.jar}:\
     ${file.reference.jcommon-1.0.23.jar}:\
     ${file.reference.jcommon-1.0.8.jar}:\
@@ -61,7 +87,37 @@ javac.classpath=\
     ${file.reference.orsoncharts-1.4-eval-nofx.jar}:\
     ${file.reference.orsonpdf-1.6-eval.jar}:\
     ${file.reference.servlet.jar}:\
-    ${file.reference.swtgraphics2d.jar}
+    ${file.reference.swtgraphics2d.jar}:\
+    ${file.reference.db4o-8.0.249.16098-all-java5.jar-1}:\
+    ${file.reference.hamcrest-core-1.3.jar-1}:\
+    ${file.reference.jcommon-1.0.23.jar-1}:\
+    ${file.reference.jcommon-1.0.8.jar-1}:\
+    ${file.reference.jfreechart-1.0.19-demo.jar-1}:\
+    ${file.reference.jfreechart-1.0.19-experimental.jar-1}:\
+    ${file.reference.jfreechart-1.0.19-swt.jar-1}:\
+    ${file.reference.jfreechart-1.0.19.jar-1}:\
+    ${file.reference.jfreesvg-2.0.jar-1}:\
+    ${file.reference.junit-4.11.jar-1}:\
+    ${file.reference.orsoncharts-1.4-eval-nofx.jar-1}:\
+    ${file.reference.orsonpdf-1.6-eval.jar-1}:\
+    ${file.reference.servlet.jar-1}:\
+    ${file.reference.swtgraphics2d.jar-1}:\
+    ${file.reference.hamcrest-core-1.3.jar-2}:\
+    ${file.reference.jcommon-1.0.23.jar-2}:\
+    ${file.reference.jcommon-1.0.8.jar-2}:\
+    ${file.reference.jfreechart-1.0.19-demo.jar-2}:\
+    ${file.reference.jfreechart-1.0.19-experimental.jar-2}:\
+    ${file.reference.jfreechart-1.0.19-swt.jar-2}:\
+    ${file.reference.jfreechart-1.0.19.jar-2}:\
+    ${file.reference.jfreesvg-2.0.jar-2}:\
+    ${file.reference.junit-4.11.jar-2}:\
+    ${file.reference.orsoncharts-1.4-eval-nofx.jar-2}:\
+    ${file.reference.orsonpdf-1.6-eval.jar-2}:\
+    ${file.reference.servlet.jar-2}:\
+    ${file.reference.swtgraphics2d.jar-2}:\
+    ${file.reference.AbsoluteLayout-RELEASE65.jar}:\
+    ${file.reference.AbsoluteLayout.jar}:\
+    ${file.reference.db4o-8.0.249.16098-all-java5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
